# aip_grasp_planning

./: .gitignore  .gitmodules  Dockerfile  README.md  build_docker.sh  entrypoint.sh  start_docker.sh
aip_grasp_planning/: CMakeLists.txt  package.xml
aip_grasp_planning/aip_grasp_planning/: cylinder_selection.py
aip_grasp_planning/include/pcl_processing/: pcl_pose_processing.h  point_cloud_processing_node.h
aip_grasp_planning/launch/: grasp_planning.launch.py
aip_grasp_planning/scripts/: cylinder_selection.py  grasp_planning_client.py  grasp_planning_node.py  utils_transform.py
aip_grasp_planning/src/: basic_pcl_subscriber.cpp  pcl_pose_processing.cpp  point_cloud_processing_node.cpp
aip_grasp_planning_interfaces/: CMakeLists.txt  package.xml
aip_grasp_planning_interfaces/srv/: GraspObjectSurfaceNormal.srv  GraspPlanning.srv
src/pcl_processing/: CMakeLists.txt  package.xml
src/pcl_processing/include/pcl_processing/: basic_pcl_subscriber.h
src/pcl_processing/scripts/: grasp_planning_node.py
